--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Djinn#0760",
   "license": "ISC",
   "dependencies": {
+    "api-npm": "^1.0.0",
     "canvas": "^2.2.0",
     "canvas-constructor": "^2.1.1",
     "cheerio": "^1.0.0-rc.2",
