--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport-discord": "^0.1.3",
     "path": "^0.12.7",
     "query-string": "^5.1.0",
+    "reaction-d.js": "^1.0.0",
     "save": "^2.3.3",
     "simple-youtube-api": "^5.1.1",
     "snekfetch": "^3.6.4",
