--- a/settings.json
+++ b/settings.json
@@ -3,11 +3,12 @@
     "token2":"NTEyOTkyNDkzMTE4MjkxOTc4.Duv4MA.rGlorQJQx_tZCc6QU9dyTMuqC0g",
     "prefixo1":">",
     "prefixo2":"b>",
-    "beta": false,
+    "beta": true,
     "donoid":"376460601909706773",
     "google_api":"AIzaSyAmffT-E8F5prLAb3XpWc2Y30S_bk-5L0c",
     "mongoose":{
         "usuario":"admin",
-        "senha":"hplucas422"
+        "senha":"hplucas422",
+        "link":"ds161410.mlab.com:61410/phoenix"
     }
 }
