--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,5 @@
 {
-    "token1":"NTAzMjM5MDU5Nzc1NDIyNDkx.D1t_Ng.3WIhFFInYm5h5IWOtESE7pMzWFY",
-    "token2":"NTEyOTkyNDkzMTE4MjkxOTc4.Duv4MA.rGlorQJQx_tZCc6QU9dyTMuqC0g",
+    "token":"NTAzMjM5MDU5Nzc1NDIyNDkx.D1t_Ng.3WIhFFInYm5h5IWOtESE7pMzWFY",
     "prefixo1":">",
     "prefixo2":"b>",
     "beta": true,
