--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Phoenix bot 2.0",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "engines": {
     "node": "10.12.0",
